test/compile_errors/err_issue64_ref_hashmap_insert_bad_types.w
//! expect-error: wrong argument type in call to 'HashMap.insert'

fn main:
    var lookup: HashMap[str, i32] = HashMap.new()
    lookup.insert(1, "x")
